start media query

--- a/panier.html
+++ b/panier.html
@@ -23,50 +23,112 @@
                 <img src="icones/logo.png" alt="Logo Oribear spécialiste des ours en peluche faits à la main.">
 
                 <div class="title">
-                    <h1>Oribear</h1>
+                    <h1><a href="index.html">Oribear</a></h1>
                     <p>Le spécialiste des ours en peluche faits à la main</p>
                 </div>
             </div>
             <nav>
-                <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="panier.html">Panier</a></li>
-                    <li>Mon compte</li>
-                    <li>Contact</li>
-                </ul>
+                <div class="toggle_btn">
+                    <span></span>
+                </div>
+
+                <div class="menu nav">
+                    <ul>
+                        <li><a href="#" class="firstmenu">Menu</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="panier.html">Panier</a></li>
+                        <li><a href="index.html">Mon compte</a></li>
+                        <li><a href="index.html">Contact</a></li>
+                    </ul>
+                </div>
+                </button>
+
             </nav>
         </header>
 
         <section>
-            <h2>Formulaire de commande</h2>
+            <button><a href="index.html">Retour</a></button>
 
-            <h3>Vos coordonnées</h3>
+            <div class="recap">
+                <h2>Récapitulatif de votre commande</h2>
 
-            <form method="post" action="traitement.php">
-                <p>
-                    <label for="name">Nom<span class="required">*</span></span></label> : <input type="text" name="name" id="name" placeholder="Votre Nom" required/>
-                </p>
-                <p>
-                    <label for="first-name">Prénom<span class="required">*</span></span></label> : <input type="text" name="first-name" id="first-name" placeholder="Votre Prénom" required/>
-                </p>
-                <p>
-                    <label for="mail">Mail<span class="required">*</span></span></label> : <input type="email" name="mail" id="mail" placeholder="Votre Mail" required/>
-                </p>
-                <p>
-                    <label for="tel">Téléphone<span class="required">*</span></span></label> : <input type="tel" name="tel" id="tel" placeholder="Votre Numéro" required/>
-                </p>
+                <div class="basket">
+                    <h3>Votre Panier</h3>
+                </div>
 
-                <h3>Adresse de facturation</h3>
+            </div>
+            <div class="form">
 
-                <p>
-                    <label for="adress">Adresse<span class="required">*</span></span></label> : <input type="text" name="adress" id="adress" placeholder="Votre Adresse" required/>
-                </p>
-            </form>
+                <h2>Formulaire de commande</h2>
+
+                <div class="infos">
+                    <h3>Vos coordonnées</h3>
+
+                    <form method="post" action="traitement.php">
+                        <p>
+                            <label for="name">Nom<span class="required">*</span></label> : <br><input type="text"
+                                name="name" id="name" placeholder="Votre Nom" required />
+                        </p>
+                        <p>
+                            <label for="first-name">Prénom<span class="required">*</span></label> : <br><input
+                                type="text" name="first-name" id="first-name" placeholder="Votre Prénom" required />
+                        </p>
+                        <p>
+                            <label for="mail">Mail<span class="required">*</span></label> : <br><input type="email"
+                                name="mail" id="mail" placeholder="Votre Mail" required />
+                        </p>
+                        <p>
+                            <label for="tel">Téléphone<span class="required">*</span></label> : <br><input type="tel"
+                                name="tel" id="tel" placeholder="Votre Numéro" required />
+                        </p>
+                </div>
+
+                <div class="adress">
+
+                    <h3>Adresse de facturation</h3>
+
+                    <p>
+                        <label for="adress">Adresse<span class="required">*</span></label> : <br><input type="text"
+                            name="adress" id="adress" placeholder="Votre Adresse" required />
+                    </p>
+                    <p>
+                        <label for="adress">Code Postal<span class="required">*</span></label> : <br><input
+                            type="number" name="adress" id="adress" placeholder="Votre Code Postal" required />
+                    </p>
+                    <p>
+                        <label for="adress">Ville<span class="required">*</span></label> : <br><input type="text"
+                            name="adress" id="adress" placeholder="Votre Ville" required />
+                    </p>
+                    </form>
+                </div>
+
+                <input type="submit" value="Valider la commande" />
+
+            </div>
 
         </section>
 
+        <footer>
 
+            <h2>Informations</h2>
+            <hr>
+            <ul>
+                <li><a href="#">Livraison</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Conditions générales de vente</a></li>
+                <li><a href="#">Mentions légales</a></li>
+            </ul>
 
+            <div class="pay">
+                <img src="icones/visa.png" alt="logo Visa" width="50" height="30">
+                <img src="icones/paypal.png" alt="logo Paypal" width="50" height="30">
+                <img src="icones/mastercard.png" alt="logo Mastercard" width="50" height="30">
+            </div>
+
+            <p>Copyright 2020 &#xA9; ORIBEAR</p>
+
+        </footer>
+        <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
