--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script async src=""></script>
+    
 
     <title>Oribear, spécialiste des ours en peluche faits à la main.</title>
 
@@ -28,12 +28,21 @@
                 </div>
             </div>
             <nav>
-                <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="panier.html">Panier</a></li>
-                    <li>Mon compte</li>
-                    <li>Contact</li>
-                </ul>
+                <div class="toggle_btn">
+                    <span></span>
+                </div>
+
+                <div class="menu nav">
+                    <ul>
+                        <li><a href="#" class="firstmenu">Menu</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="panier.html">Panier</a></li>
+                        <li><a href="index.html">Mon compte</a></li>
+                        <li><a href="index.html">Contact</a></li>
+                    </ul>
+                </div>
+                </button>
+
             </nav>
         </header>
 
@@ -42,32 +51,37 @@
             <div class="articles">
 
                 <div class="teddies">
-                    <img src="images/teddy_1.jpg" alt="Photo Norbert, ours fait main">
+                    <a href="teddy1.html"><img src="images/teddy_1.jpg" alt="Photo Norbert, ours fait main"></a>
                     <h2><a href="teddy1.html">Norbert</a></h2>
+                    <hr>
                     <p>Prix unitaire: 29.00€</p>
                 </div>
 
                 <div class="teddies">
-                    <img src="images/teddy_2.jpg" alt="Photo Arnold, ours fait main">
+                    <a href="teddy2.html"><img src="images/teddy_2.jpg" alt="Photo Arnold, ours fait main"></a>
                     <h2><a href="teddy2.html">Arnold</a></h2>
+                    <hr>
                     <p>Prix unitaire: 39.00€</p>
                 </div>
 
                 <div class="teddies">
-                    <img src="images/teddy_3.jpg" alt="Photo Lenny et Carl, ours faits main">
+                    <a href="teddy3.html"><img src="images/teddy_3.jpg" alt="Photo Lenny et Carl, ours faits main"></a>
                     <h2><a href="teddy3.html">Lenny et Carl</a></h2>
+                    <hr>
                     <p>Prix unitaire: 59.00€</p>
                 </div>
 
                 <div class="teddies">
-                    <img src="images/teddy_4.jpg" alt="Photo Gustav, ours fait main">
+                    <a href="teddy4.html"><img src="images/teddy_4.jpg" alt="Photo Gustav, ours fait main"></a>
                     <h2><a href="teddy4.html">Gustav</a></h2>
+                    <hr>
                     <p>Prix unitaire: 45.00€</p>
                 </div>
 
                 <div class="teddies">
-                    <img src="images/teddy_5.jpg" alt="Photo Garfunkel, ours fait main">
+                    <a href="teddy5.html"><img src="images/teddy_5.jpg" alt="Photo Garfunkel, ours fait main"></a>
                     <h2><a href="teddy5.html">Garfunkel</a></h2>
+                    <hr>
                     <p>Prix unitaire: 55.00€</p>
                 </div>
 
@@ -75,14 +89,28 @@
         </section>
 
         <footer>
-            <p>Oribear, application spécialisée dans la confection d'ours en peluche faits à la main, marque du groupe
-                Orinoco.</p>
-            <h2>Mentions légales</h2>
+
+            <h2>Informations</h2>
+            <hr>
+            <ul>
+                <li><a href="#">Livraison</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Conditions générales de vente</a></li>
+                <li><a href="#">Mentions légales</a></li>
+            </ul>
+
+            <div class="pay">
+                <img src="icones/visa.png" alt="logo Visa" width="50" height="30">
+                <img src="icones/paypal.png" alt="logo Paypal" width="50" height="30">
+                <img src="icones/mastercard.png" alt="logo Mastercard" width="50" height="30">
+            </div>
+
+            <p>Copyright 2020 &#xA9; ORIBEAR</p>
 
         </footer>
 
     </div>
-
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
