--- a/teddy2.html
+++ b/teddy2.html
@@ -23,24 +23,34 @@
                 <img src="icones/logo.png" alt="Logo Oribear spécialiste des ours en peluche faits à la main.">
 
                 <div class="title">
-                    <h1>Oribear</h1>
+                    <h1><a href="index.html">Oribear</a></h1>
                     <p>Le spécialiste des ours en peluche faits à la main</p>
                 </div>
             </div>
             <nav>
-                <ul>
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="panier.html">Panier</a></li>
-                    <li>Mon compte</li>
-                    <li>Contact</li>
-                </ul>
+                <div class="toggle_btn">
+                    <span></span>
+                </div>
+
+                <div class="menu nav">
+                    <ul>
+                        <li><a href="#" class="firstmenu">Menu</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="panier.html">Panier</a></li>
+                        <li><a href="index.html">Mon compte</a></li>
+                        <li><a href="index.html">Contact</a></li>
+                    </ul>
+                </div>
+                </button>
+
             </nav>
         </header>
 
         <section>
 
-
             <div class="articles">
+
+                <button><a href="index.html">Retour</a></button>
 
                 <div class="bear">
                     <img src="images/teddy_2.jpg" alt="Photo Arnold, ours fait main">
@@ -89,8 +99,30 @@
                     <input type="button" value="Ajouter au panier" />
 
                 </div>
-
             </div>
+        </section>
+
+        <footer>
+
+            <h2>Informations</h2>
+            <hr>
+            <ul>
+                <li><a href="#">Livraison</a></li>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Conditions générales de vente</a></li>
+                <li><a href="#">Mentions légales</a></li>
+            </ul>
+
+            <div class="pay">
+                <img src="icones/visa.png" alt="logo Visa" width="50" height="30">
+                <img src="icones/paypal.png" alt="logo Paypal" width="50" height="30">
+                <img src="icones/mastercard.png" alt="logo Mastercard" width="50" height="30">
+            </div>
+
+            <p>Copyright 2020 &#xA9; ORIBEAR</p>
+
+        </footer>
+        <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
