--- a/panier.html
+++ b/panier.html
@@ -32,6 +32,10 @@
                     <span></span>
                 </div>
 
+                <div class="icone_basket">
+                    <a href="panier.html"><img src="icones/basket.png" alt="icone panier commande"></a>
+                </div>
+
                 <div class="menu nav">
                     <ul>
                         <li><a href="#" class="firstmenu">Menu</a></li>
@@ -41,7 +45,6 @@
                         <li><a href="index.html">Contact</a></li>
                     </ul>
                 </div>
-                </button>
 
             </nav>
         </header>
@@ -109,6 +112,14 @@
         </section>
 
         <footer>
+
+            <div class="network">
+                <a href="https://www.facebook.com/" target="blanck"><img src="icones/fb.png" alt="logo Facebook"
+                        width="50" height="50"></a>
+                <a href="https://www.instagram.com/" target="blanck"><img src="icones/insta.png" alt="logo Paypal"
+                        width="50" height="50"></a>
+                <a href="#" target="blanck"><img src="icones/mail.png" alt="logo Mastercard" width="50" height="50"></a>
+            </div>
 
             <h2>Informations</h2>
             <hr>
