--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="icone_basket">
-                    <a href="panier.html"><img src="icones/basket.png" alt="icone panier commande"></a>
+                    <a href="panier.html"><img src="icones/shopping.png" alt="icone panier commande"></a>
                 </div>
 
                 <div class="menu nav">
