--- a/confirmation.html
+++ b/confirmation.html
@@ -9,9 +9,9 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script async src=""></script>
 
-    <title>Garfunkel, ours en peluche fait à la main.</title>
+
+    <title>Oribear, spécialiste des ours en peluche faits à la main.</title>
 
 </head>
 
@@ -45,63 +45,16 @@
                         <li><a href="index.html">Contact</a></li>
                     </ul>
                 </div>
-
+              
             </nav>
         </header>
 
         <section>
 
-            <div class="articles">
-
-                <button><a href="index.html">Retour</a></button>
-
-                <div class="bear">
-                    <img src="images/teddy_5.jpg" alt="Photo Garfunkel, ours fait main">
-
-                    <h2>Garfunkel</h2>
-                    <hr>
-                    <p>Facile à saisir pour les petites mains, cet ourson séduira vos enfants grâce à son poil soyeux et
-                        son corps tout moelleux. </p>
-                    <hr>
-
-                    <p class="price">Prix unitaire: 55.00€</p>
-
-                    <form method="post" action="traitement.php">
-                        <p>
-                            <label for="color">Couleur</label>
-
-                            <select name="color" id="color">
-                                <option value="choice">Choississez la couleur</option>
-                                <option value="beige">Beige</option>
-                                <option value="chocolat">Chocolat</option>
-                                <option value="brun">Brun</option>
-                            </select>
-                        </p>
-                    </form>
-
-                    <form method="post" action="traitement.php">
-                        <p>
-                            <label for="quantity">Quantité</label>
-
-                            <select name="quantity" id="quantity">
-                                <option value="choice">Choississez la quantité</option>
-                                <option value="one">1</option>
-                                <option value="two">2</option>
-                                <option value="three">3</option>
-                                <option value="for">4</option>
-                                <option value="five">5</option>
-                                <option value="six">6</option>
-                                <option value="seven">7</option>
-                                <option value="eight">8</option>
-                                <option value="nine">9</option>
-                                <option value="ten">10</option>
-                            </select>
-                        </p>
-                    </form>
-
-                    <input type="button" value="Ajouter au panier" />
-
-                </div>
+            <div id="confirm">
+                <h2>MERCI</h2>
+                <p>Votre commande a été enregistrée</p>
+            
             </div>
         </section>
 
@@ -133,7 +86,9 @@
             <p>Copyright 2020 &#xA9; ORIBEAR</p>
 
         </footer>
-        <script type="text/javascript" src="js/app.js"></script>
+
+    </div>
+    <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
