--- a/panier.html
+++ b/panier.html
@@ -57,6 +57,26 @@
 
                 <div class="basket">
                     <h3>Votre Panier</h3>
+
+                    <table>
+                        <tr>
+                            <th>Articles</th>
+                            <th>Quantité</th>
+                            <th>Prix TTC</th>
+                        </tr>
+
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+
                 </div>
 
             </div>
