--- a/produits.html
+++ b/produits.html
@@ -11,7 +11,7 @@
 
     <script async src=""></script>
 
-    <title>Lenny et Carl, ours en peluche faits à la main.</title>
+    <title>Norbert, ours en peluche faits à la main.</title>
 
 </head>
 
@@ -49,59 +49,10 @@
             </nav>
         </header>
 
-        <section>
+        <section id="teddy_infos">
 
-            <div class="articles">
+            <button><a href="index.html">Retour</a></button>
 
-                <button><a href="index.html">Retour</a></button>
-
-                <div class="bear">
-                    <img src="images/teddy_3.jpg" alt="Photo Lenny et Carl, ours fait main">
-
-                    <h2>Lenny et Carl</h2>
-                    <hr>
-                    <p>Avec <strong>Lenny et Carl</strong> votre enfant fera travailler son imagination afin qu'ils
-                        deviennent les personnages principaux de toutes ses histoires. Doux, confortable et rassurant.
-                    </p>
-                    <hr>
-                    <p class="price">Prix unitaire: 59.00€</p>
-
-                    <form method="post" action="traitement.php">
-                        <p>
-                            <label for="color">Couleur</label>
-
-                            <select name="color" id="color">
-
-                                <option value="marron">Marron</option>
-
-                            </select>
-                        </p>
-                    </form>
-
-                    <form method="post" action="traitement.php">
-                        <p>
-                            <label for="quantity">Quantité</label>
-
-                            <select name="quantity" id="quantity">
-                                <option value="choice">Choississez la quantité</option>
-                                <option value="one">1</option>
-                                <option value="two">2</option>
-                                <option value="three">3</option>
-                                <option value="for">4</option>
-                                <option value="five">5</option>
-                                <option value="six">6</option>
-                                <option value="seven">7</option>
-                                <option value="eight">8</option>
-                                <option value="nine">9</option>
-                                <option value="ten">10</option>
-                            </select>
-                        </p>
-                    </form>
-
-                    <input type="button" value="Ajouter au panier" />
-
-                </div>
-            </div>
         </section>
 
         <footer>
@@ -132,7 +83,10 @@
             <p>Copyright 2020 &#xA9; ORIBEAR</p>
 
         </footer>
-        <script type="text/javascript" src="js/app.js"></script>
+
+    </div>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/more.js"></script>
 </body>
 
 </html>
