--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span></span>
                 </div>
 
-                <div class="icone_basket">
+                <div class="icone_cart">
                     <a href="panier.html"><img src="icones/bag.png" alt="icone panier commande"></a>
                 </div>
 
@@ -51,9 +51,6 @@
 
         <section id="teddy">
 
-           
-
-            
         </section>
 
         <footer>
@@ -86,7 +83,7 @@
         </footer>
 
     </div>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
