--- a/confirmation.html
+++ b/confirmation.html
@@ -32,7 +32,7 @@
                     <span></span>
                 </div>
 
-                <div class="icone_basket">
+                <div class="icone_cart">
                     <a href="panier.html"><img src="icones/bag.png" alt="icone panier commande"></a>
                 </div>
 
@@ -88,7 +88,7 @@
         </footer>
 
     </div>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
