--- a/produits.html
+++ b/produits.html
@@ -9,8 +9,6 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script async src=""></script>
-
     <title>Norbert, ours en peluche faits à la main.</title>
 
 </head>
@@ -32,7 +30,7 @@
                     <span></span>
                 </div>
 
-                <div class="icone_basket">
+                <div class="icone_cart">
                     <a href="panier.html"><img src="icones/bag.png" alt="icone panier commande"></a>
                 </div>
 
@@ -85,8 +83,8 @@
         </footer>
 
     </div>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/more.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/more.js"></script>
 </body>
 
 </html>
