--- a/panier.html
+++ b/panier.html
@@ -57,20 +57,10 @@
 
                 <div id="cart">
 
-                 <table id="order">
-                       
-                            <th id="article_cart">Produit</th>
-                            <th id="name_cart">Nom</th>
-                            <th id="color_cart">Couleur</th>
-                            <th id="price_cart">Prix.U</th>
-                            <th id="quantity_cart">Quantité</th>
-                            <th id="price_total_cart">Prix Total</th>
-                 </table>
-
                 </div>
 
             </div>
-            <div class="form">
+            <div id="form">
 
                 <h2>Formulaire de commande</h2>
 
@@ -114,8 +104,6 @@
                     </p>
                     </form>
                 </div>
-
-                <input type="submit" value="Valider la commande" />
 
             </div>
 
