--- a/produits.html
+++ b/produits.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="icone_cart">
-                    <a href="panier.html"><img src="icones/bag.png" alt="icone panier commande"></a>
+                    <a href="panier.html"><img src="icones/bag.svg" alt="icone panier commande" id="cart_svg"></a>
                 </div>
 
                 <div class="menu nav">
@@ -57,10 +57,10 @@
 
             <div class="network">
                 <a href="https://www.facebook.com/" target="blanck"><img src="icones/fb.png" alt="logo Facebook"
-                        width="50" height="50"></a>
+                        width="50" height="50" id="icone_fb"></a>
                 <a href="https://www.instagram.com/" target="blanck"><img src="icones/insta.png" alt="logo Paypal"
-                        width="50" height="50"></a>
-                <a href="#" target="blanck"><img src="icones/mail.png" alt="logo Mastercard" width="50" height="50"></a>
+                        width="50" height="50" id="icone_insta"></a>
+                <a href="#" target="blanck"><img src="icones/mail.png" alt="logo Mastercard" width="50" height="50" id="icone_mail"></a>
             </div>
 
             <h2>Informations</h2>
