--- a/produits.html
+++ b/produits.html
@@ -18,7 +18,7 @@
 
         <header>
             <div class="banner">
-                <img src="icones/logo.png" alt="Logo Oribear spécialiste des ours en peluche faits à la main.">
+                <img src="images/bear1.png" alt="Logo Oribear spécialiste des ours en peluche faits à la main.">
 
                 <div class="title">
                     <h1><a href="index.html">Oribear</a></h1>
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="icone_cart">
-                    <a href="panier.html"><img src="icones/bag.svg" alt="icone panier commande" id="cart_svg"></a>
+                    <a href="panier.html"><img src="icones/logo.png" alt="icone panier commande" id="cart_svg"></a>
                 </div>
 
                 <div class="menu nav">
