--- a/panier.html
+++ b/panier.html
@@ -48,7 +48,9 @@
         </header>
 
         <section>
-            <button><a href="index.html">Retour</a></button>
+            <div id="return_home">
+
+            </div>
 
             <div class="recap">
                 <h2>Récapitulatif de votre commande</h2>
