--- a/panier.html
+++ b/panier.html
@@ -66,7 +66,7 @@
 
                 <div class="infos">
 
-                    <form id="my_form" method="post" action="traitement.php">
+                    <form id="my_form" method="post">
 
                         <p>
                             <label for="lastName">Nom<span class="required">*</span></label> : <br>
