--- a/confirmation.html
+++ b/confirmation.html
@@ -9,8 +9,6 @@
 
     <link rel="stylesheet" href="style.css">
 
-
-
     <title>Oribear, spécialiste des ours en peluche faits à la main.</title>
 
 </head>
@@ -52,7 +50,7 @@
         <section>
 
             <div id="confirm">
-                
+
             </div>
 
         </section>
@@ -64,7 +62,8 @@
                         width="50" height="50" id="icone_fb"></a>
                 <a href="https://www.instagram.com/" target="blanck"><img src="icones/insta.png" alt="logo Paypal"
                         width="50" height="50" id="icone_insta"></a>
-                <a href="#" target="blanck"><img src="icones/mail.png" alt="logo Mastercard" width="50" height="50" id="icone_mail"></a>
+                <a href="#" target="blanck"><img src="icones/mail.png" alt="logo Mastercard" width="50" height="50"
+                        id="icone_mail"></a>
             </div>
 
             <h2>Informations</h2>
