--- a/produits.html
+++ b/produits.html
@@ -58,7 +58,8 @@
                         width="50" height="50" id="icone_fb"></a>
                 <a href="https://www.instagram.com/" target="blanck"><img src="icones/insta.png" alt="logo Paypal"
                         width="50" height="50" id="icone_insta"></a>
-                <a href="#" target="blanck"><img src="icones/mail.png" alt="logo Mastercard" width="50" height="50" id="icone_mail"></a>
+                <a href="#" target="blanck"><img src="icones/mail.png" alt="logo Mastercard" width="50" height="50"
+                        id="icone_mail"></a>
             </div>
 
             <h2>Informations</h2>
