--- a/confirmation.html
+++ b/confirmation.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Oribear, spécialiste des ours en peluche faits à la main.</title>
+    <title>Confirmation de commande Oribear</title>
 
 </head>
 
