--- a/produits.html
+++ b/produits.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Norbert, ours en peluche faits à la main.</title>
+    <title>Personnalisation des ours en peluche Oribear</title>
 
 </head>
 
