--- a/panier.html
+++ b/panier.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Panier Oribear.</title>
+    <title>Récapitulatif de commande Oribear</title>
 
 </head>
 
